# justatest

./: .bumpversion.cfg  .mlc-config.json  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  NOTICE  README.dev.md  README.md  README.rst  next_steps.md  project_setup.md  setup.cfg  sonar-project.properties
.githooks/: pre-commit
.github/.github/next_steps/: 01_sonarcloud_integration.md
.github/next_steps/: 01_sonarcloud_integration.md
.github/workflows/: next_steps.yml  pytestsubprocwin.yml  quality.yml
docs/: Makefile  conf.py  index.rst  make.bat
justatest/: __init__.py  justatest.py  my_module.py
tests/: bla.py  test_justatest.py  test_my_module.py
