# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Stefan Verhoeven
author_email = s.verhoeven@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Just a test for https://github.com/NLeSC/python-template
long_description = file: README.md
long_description_content_type = text/markdown
name = justatest
project_urls =
    Bug Tracker = https://github.com/sverhoeven/justatest/issues
url = "https://github.com/sverhoeven/justatest
version = 1.0.1


[options]
zip_safe = False
include_package_data = True
packages =
    justatest
install_requires =


[options.extras_require]
dev =
    prospector[with_pyroma]
    yapf
    isort
    pytest
    pytest-cov
    pycodestyle
    docutils
    pytest-runner
    sphinx
    sphinx_rtd_theme
    recommonmark

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes


[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = justatest

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
